# gemini-json-ocr

./: .env.sample  .pre-commit-config.yaml  LICENSE  README.md  prompt.txt  pyproject.toml  scan.py
